# e-commerce

./: .coverage  .gitignore  Readme.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_baseproduct_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_data_upload_py.html  z_145eef247bfb46b6_lawngrass_py.html  z_145eef247bfb46b6_printmixin_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_category_py.html  z_a44f0ac069e85531_test_lawngrass_py.html  z_a44f0ac069e85531_test_printmixin_py.html  z_a44f0ac069e85531_test_product_py.html  z_a44f0ac069e85531_test_smartphone_py.html
src/: baseproduct.py  category.py  data_upload.py  lawngrass.py  printmixin.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_lawngrass.py  test_printmixin.py  test_product.py  test_smartphone.py  tests_category.py  tests_product.py
